--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
 </div>
 
 
-<div class="d-flex flex-column justify-content-center" style="background-color: black;">
+<div class="d-flex flex-column justify-content-center" style="background-color: black;text-align:center;">
 <div>
     <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1730897241/images-removebg-preview_sb17dx.png"  style="padding-left:600px;">
     </div>
