--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
       </div>    
       
-      <h3 style="color: aliceblue;padding-left:500px;margin-top:10px">Copyright &copy; 2024. All Rights Reserved</h3>
+      <h3 style="color: aliceblue;margin-top:10px">Copyright &copy; 2024. All Rights Reserved</h3>
       
 </div>
 </body>
