--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
 
 <div class="d-flex flex-column justify-content-center" style="background-color: black;text-align:center;">
-<div>
+<div style="text-align:center;">
     <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1730897241/images-removebg-preview_sb17dx.png">
     </div>
     <br>
