--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="head nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html" class="head" style="font-size:30px;padding-left:250px;color:aliceblue;">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html" class="head" style="font-size:20px;padding-left:250px;color:aliceblue;">Home</a>
                   </li>
                   <li class=" head nav-item">
-                    <a class="nav-link" href="about.html"  style="font-size:30px;padding-left:50px; color:aliceblue;">About us</a>
+                    <a class="nav-link" href="about.html"  style="font-size:20px;padding-left:50px; color:aliceblue;">About us</a>
                   </li>
                   <li class="head nav-item active">
-                    <a class="nav-link" href="contact-us.html"  class="head" style="font-size:30px;padding-left:50px; color:aliceblue;">Contact Us</a>
+                    <a class="nav-link" href="contact-us.html"  class="head" style="font-size:20px;padding-left:50px; color:aliceblue;">Contact Us</a>
                   </li>
                   <li class="head nav-item active">
-                    <a class="nav-link" href="recipes.html" class="head" style="font-size:30px;padding-left:50px;color:aliceblue;">Recipes</a>
+                    <a class="nav-link" href="recipes.html" class="head" style="font-size:20px;padding-left:50px;color:aliceblue;">Recipes</a>
                   </li>
                 </ul>
               </div>
@@ -639,10 +639,10 @@
 
 <div class="d-flex flex-column justify-content-center" style="background-color: black;text-align:center;">
 <div style="text-align:center;">
-    <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1730897241/images-removebg-preview_sb17dx.png">
+    <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1730897241/images-removebg-preview_sb17dx.png" class="logo">
     </div>
     <br>
-    <div class="m-1 d-flex flex-row " >
+    <div class="m-1 d-flex flex-row " style="text-align:center;">
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-facebook" viewBox="0 0 16 16" style="margin: 10px;">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
         </svg>
