--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     
     <div class="about-img-text">
         <div class="about-img">
-            <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1731256332/home_pg_bkimg2_fdwcu0.jpg" alt="about image" class="about--image">
+            <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1731256332/home_pg_bkimg2_fdwcu0.jpg" alt="about image" style="height:500px;width:800px;">
         </div>
 
         <div class="about-text">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="about-img">
-            <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1731256302/home_pg_bkimg3_okl0n7.jpg" alt="about image" class="about--image">
+            <img src="https://res.cloudinary.com/dd3py8vac/image/upload/v1731256302/home_pg_bkimg3_okl0n7.jpg" alt="about image" style="height:500px;width:800px;" >
         </div>
 
     </div>
